@@ -1,3 +1,7 @@
+drkns 26.11.2016 14:11:57 +0200 - build 4858
+
+1. Частичный откат 4853 ради совместимости с W2k.
+
 drkns 26.11.2016 03:41:05 +0200 - build 4857
 
 1. В gcc wcschr и ему подобные снимали константность с возвращаемого указателя.
